Add datalayer, sending art
